--- a/public/index.html
+++ b/public/index.html
@@ -2,94 +2,53 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Chamada Igreja - Mobile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chamada Maranata</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <style>
-        :root {
-            --bg-body: #0b0b0b;
-            --card-dark: #1a1a1a;
-            --maranata-blue: #0d6efd;
-            --maranata-red: #ff4444;
-            --maranata-yellow: #ffca28;
-        }
-
-        body { 
-            background-color: var(--bg-body); 
-            color: #ffffff; 
-            font-family: 'Segoe UI', Roboto, sans-serif;
-            padding-bottom: 70px; /* Espaço para o menu inferior */
-        }
-
-        /* Ajustes de toque para Celular */
-        .btn-check-presence { padding: 12px 20px; font-size: 1.1rem; }
-        
-        .accordion-item { background-color: var(--card-dark); border-color: #333; }
-        .accordion-button { background-color: var(--card-dark); color: var(--maranata-yellow); font-weight: bold; }
-        .accordion-button:not(.collapsed) { background-color: #252525; color: var(--maranata-yellow); }
-        
-        .member-row { 
-            border-bottom: 1px solid #333; 
-            padding: 12px 5px; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-        }
-
-        .name-link { 
-            color: #fff; 
-            text-decoration: none; 
-            font-weight: 500; 
-            display: block; 
-            flex-grow: 1;
-        }
-
-        .status-badge { width: 10px; height: 10px; border-radius: 50%; display: inline-block; margin-right: 8px; }
-        .bg-blue { background-color: var(--maranata-blue); box-shadow: 0 0 8px var(--maranata-blue); }
-        .bg-red { background-color: var(--maranata-red); box-shadow: 0 0 8px var(--maranata-red); }
-
-        /* Estilo do Modal */
-        .modal-content { background-color: var(--card-dark); border: 1px solid var(--maranata-blue); }
+        body { background-color: #0b0b0b; color: white; padding-bottom: 80px; }
+        .card-membro { background: #1a1a1a; border-left: 4px solid #0d6efd; margin-bottom: 10px; }
+        .text-yellow { color: #ffca28; }
+        .btn-presenca { background: #0d6efd; border: none; }
+        .btn-falta { background: #ff4444; border: none; }
+        .navbar-custom { border-bottom: 2px solid #ffca28; }
     </style>
 </head>
 <body>
 
-<nav class="navbar navbar-dark bg-black sticky-top border-bottom border-primary">
+<nav class="navbar navbar-dark bg-black sticky-top navbar-custom p-3">
     <div class="container-fluid">
-        <span class="navbar-brand fw-bold small text-uppercase">
-            <i class="bi bi-church text-primary me-2"></i> Chamada Maranata
-        </span>
-        <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalImport">
-            <i class="bi bi-file-earmark-pdf"></i>
+        <span class="navbar-brand fw-bold">CHAMADA MARANATA</span>
+        <button class="btn btn-outline-warning btn-sm" data-bs-toggle="modal" data-bs-target="#modalNovo">
+            <i class="bi bi-person-plus"></i>
         </button>
     </div>
 </nav>
 
 <div class="container mt-3">
-    <div id="alertSexta" class="alert alert-danger d-none" role="alert">
-        <i class="bi bi-info-circle-fill"></i> Hoje é Sexta-feira: <b>Culto no Lar</b>.
-    </div>
+    <input type="text" id="busca" class="form-control bg-dark text-white border-secondary mb-3" placeholder="Buscar por nome ou função...">
 
-    <div class="accordion shadow" id="listaFuncoes">
-        <div class="text-center py-5" id="loader">
-            <div class="spinner-border text-primary" role="status"></div>
-            <p class="mt-2 text-white-50">Sincronizando membros...</p>
+    <div id="listaChamada">
         </div>
-    </div>
 </div>
 
-<div class="modal fade" id="modalMembro" tabindex="-1">
+<div class="modal fade" id="modalNovo" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content shadow-lg">
+        <div class="modal-content bg-dark border-primary">
             <div class="modal-header border-secondary">
-                <h5 class="modal-title text-yellow" id="modalNome">Nome do Membro</h5>
+                <h5 class="modal-title">Gerenciar Membro</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                <p class="text-white-50 small">Funções deste membro:</p>
-                <div id="modalListaFuncoes" class="d-flex flex-wrap gap-2">
-                    </div>
+                <input type="text" id="nomeMembro" class="form-control mb-2" placeholder="Nome">
+                <input type="text" id="funcoesMembro" class="form-control mb-2" placeholder="Funções (ex: Obreiro, Som)">
+                <select id="catMembro" class="form-select mb-2">
+                    <option value="Adulto">Adulto</option>
+                    <option value="Jovem">Jovem</option>
+                    <option value="Adolescente">Adolescente</option>
+                </select>
+                <button onclick="salvarMembro()" class="btn btn-primary w-100">Salvar no Firebase</button>
             </div>
         </div>
     </div>
@@ -98,37 +57,56 @@
 <nav class="navbar fixed-bottom bg-black border-top border-secondary py-2">
     <div class="container d-flex justify-content-around">
         <a href="index.html" class="text-primary text-center text-decoration-none">
-            <i class="bi bi-person-check fs-4 d-block"></i>
-            <span style="font-size: 0.7rem;">Chamada</span>
+            <i class="bi bi-person-check fs-4"></i><br><small>Chamada</small>
         </a>
         <a href="relatorio.html" class="text-white-50 text-center text-decoration-none">
-            <i class="bi bi-file-earmark-bar-graph fs-4 d-block"></i>
-            <span style="font-size: 0.7rem;">Relatórios</span>
+            <i class="bi bi-file-bar-graph fs-4"></i><br><small>Relatórios</small>
         </a>
     </div>
 </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module">
+    // Aqui entra o firebaseConfig que você pegou no console do Firebase
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getFirestore, doc, setDoc, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-<script>
-    // Bloqueio de Sexta-feira
-    if (new Date().getDay() === 5) {
-        document.getElementById('alertSexta').classList.remove('d-none');
-        // Aqui você pode desabilitar os botões de salvar
-    }
+    const firebaseConfig = { /* COLE SEUS DADOS AQUI */ };
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    // Função para simular o clique no nome e ver as funções
-    function verFuncoes(nome) {
-        document.getElementById('modalNome').innerText = nome;
-        // No sistema real, buscaria no Firebase. Exemplo:
-        const funcoesExemplo = ["Obreiro", "Instrumentista", "Operador de Som"];
-        let html = '';
-        funcoesExemplo.forEach(f => {
-            html += `<span class="badge bg-warning text-dark">${f}</span>`;
+    // Função para Salvar/Editar
+    window.salvarMembro = async () => {
+        const nome = document.getElementById('nomeMembro').value.toUpperCase();
+        const funcoes = document.getElementById('funcoesMembro').value.split(',').map(f => f.trim());
+        const categoria = document.getElementById('catMembro').value;
+
+        await setDoc(doc(db, "membros", nome), { nome, funcoes, categoria }, { merge: true });
+        bootstrap.Modal.getInstance(document.getElementById('modalNovo')).hide();
+    };
+
+    // Renderizar Lista em Ordem Alfabética
+    const q = query(collection(db, "membros"), orderBy("nome", "asc"));
+    onSnapshot(q, (snapshot) => {
+        const lista = document.getElementById('listaChamada');
+        lista.innerHTML = '';
+        snapshot.forEach(doc => {
+            const m = doc.data();
+            lista.innerHTML += `
+                <div class="card card-membro p-3">
+                    <div class="d-flex justify-content-between align-items-start">
+                        <div onclick="abrirEdicao('${m.nome}', '${m.funcoes.join(',')}')">
+                            <strong class="d-block">${m.nome}</strong>
+                            <small class="text-yellow">${m.funcoes.join(' • ')}</small>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-sm btn-presenca">P</button>
+                            <button class="btn btn-sm btn-falta">F</button>
+                        </div>
+                    </div>
+                </div>`;
         });
-        document.getElementById('modalListaFuncoes').innerHTML = html;
-        new bootstrap.Modal(document.getElementById('modalMembro')).show();
-    }
+    });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
