--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,13 @@
         .btn-p.active { background: var(--primary-blue); color: white; }
         .btn-f.active { background: var(--danger-red); color: white; }
 
+        /* Botão Editar */
         .btn-edit { color: #555; border: none; background: transparent; font-size: 1.1rem; margin-right: 8px; padding: 0; }
+
+        /* Botão Flutuante ADD */
         .btn-float { position: fixed; bottom: 85px; right: 20px; width: 55px; height: 55px; border-radius: 50%; background: var(--primary-blue); color: white; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; box-shadow: 0 4px 10px rgba(13, 110, 253, 0.4); border: none; z-index: 1000; }
 
-        /* Modais */
+        /* Modais com Letra Branca */
         .modal-content { background-color: #121212; border: 1px solid var(--primary-blue); }
         .form-control-custom { color: #ffffff !important; background-color: #000 !important; border: 1px solid #444 !important; }
         .form-control-custom::placeholder { color: #ffffff; opacity: 0.7; }
@@ -115,7 +118,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header border-secondary">
-                <h5 class="modal-title text-yellow" id="editNomeMembro">Gerenciar Registro</h5>
+                <h5 class="modal-title text-yellow" id="editNomeMembro">Gerenciar Membro</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
@@ -129,8 +132,15 @@
 
                 <hr class="border-secondary">
                 
+                <div class="p-2 border border-warning rounded mb-3">
+                    <label class="text-warning small fw-bold d-block mb-2">Correção de Erro:</label>
+                    <button id="btnLimparChamadaDia" class="btn btn-outline-warning btn-sm w-100">
+                        <i class="bi bi-eraser-fill me-2"></i>LIMPAR CHAMADA DE HOJE
+                    </button>
+                </div>
+
                 <div class="p-2 border border-danger rounded">
-                    <label class="text-danger small fw-bold d-block mb-2">Deletar Membro:</label>
+                    <label class="text-danger small fw-bold d-block mb-2">Zona de Perigo:</label>
                     <button id="btnExcluirMembro" class="btn btn-outline-danger btn-sm w-100">
                         <i class="bi bi-trash3-fill me-2"></i>EXCLUIR MEMBRO DEFINITIVAMENTE
                     </button>
@@ -140,7 +150,7 @@
     </div>
 </div>
 
-<nav class="navbar fixed-bottom navbar-custom py-2 shadow-lg">
+<nav class="navbar fixed-bottom navbar-custom py-2">
     <div class="container d-flex justify-content-around">
         <a href="index.html" class="text-primary text-center text-decoration-none"><i class="bi bi-people-fill fs-4 d-block"></i><span style="font-size: 0.7rem;">Chamada</span></a>
         <a href="relatorio.html" class="text-white-50 text-center text-decoration-none"><i class="bi bi-file-bar-graph fs-4 d-block"></i><span style="font-size: 0.7rem;">Relatórios</span></a>
@@ -149,7 +159,7 @@
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, collection, onSnapshot, doc, setDoc, updateDoc, deleteDoc, arrayUnion, arrayRemove, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+    import { getFirestore, collection, onSnapshot, doc, setDoc, updateDoc, deleteDoc, arrayUnion, arrayRemove, query, orderBy, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
     const firebaseConfig = {
         apiKey: "AIzaSyCEMfA8_6LAbvanYwXE_6KcO0WQWoI5nSQ",
@@ -165,11 +175,12 @@
 
     const dias = ["Domingo", "Segunda-Feira", "Terça-Feira", "Quarta-Feira", "Quinta-Feira", "Sexta-Feira", "Sábado"];
     const hojeObj = new Date();
+    const hojeISO = hojeObj.toISOString().split('T')[0];
     document.getElementById('exibirData').innerText = hojeObj.toLocaleDateString('pt-BR') + " - " + dias[hojeObj.getDay()];
 
     let membroSendoEditado = "";
 
-    // 1. Salvar Novo Membro
+    // 1. Cadastrar Novo Membro
     document.getElementById('btnSalvarNovoMembro').onclick = async () => {
         const nome = document.getElementById('novoNomeMembro').value.trim().toUpperCase();
         const grupo = document.getElementById('novoGrupoMembro').value.trim().toUpperCase() || "GERAL";
@@ -181,15 +192,17 @@
         } catch (e) { alert(e.message); }
     };
 
-    // 2. Sincronizar Listas
+    // 2. Renderizar Listas em Tempo Real
     onSnapshot(query(collection(db, "membros"), orderBy("nome", "asc")), (snapshot) => {
         const listaCom = document.getElementById('listaComFuncao');
         const listaSem = document.getElementById('listaSemFuncao');
         listaCom.innerHTML = ""; listaSem.innerHTML = "";
+
         snapshot.forEach(docSnap => {
             const m = docSnap.data();
             const temFun = m.funcoes && m.funcoes.length > 0;
             const nomeExibicao = `${m.nome} <span class="text-grupo">(${m.grupo || 'GERAL'})</span>`;
+
             const html = `
                 <div class="member-card">
                     <button class="btn-edit" onclick="abrirEditor('${m.nome}')"><i class="bi bi-pencil-square"></i></button>
@@ -207,7 +220,7 @@
         });
     });
 
-    // 3. Funções do Editor
+    // 3. Abrir Editor Individual
     window.abrirEditor = (nome) => {
         membroSendoEditado = nome;
         document.getElementById('editNomeMembro').innerText = nome;
@@ -223,6 +236,7 @@
         modal.show();
     };
 
+    // 4. Funções de Adicionar/Remover Categoria
     document.getElementById('btnAddFuncao').onclick = async () => {
         const f = document.getElementById('inputNovaFuncao').value.trim().toUpperCase();
         if(!f) return;
@@ -231,27 +245,43 @@
     };
 
     window.removerFuncao = async (f) => {
-        if(confirm(`Excluir função ${f}?`)) {
+        if(confirm(`Remover função ${f}?`)) {
             await updateDoc(doc(db, "membros", membroSendoEditado), { funcoes: arrayRemove(f) });
         }
     };
 
-    // 4. EXCLUIR MEMBRO DEFINITIVAMENTE
-    document.getElementById('btnExcluirMembro').onclick = async () => {
-        if(confirm(`ATENÇÃO: Deseja realmente excluir ${membroSendoEditado} do banco de dados? Esta ação não pode ser desfeita.`)) {
+    // 5. LIMPAR CHAMADA DE HOJE (ESTORNO)
+    document.getElementById('btnLimparChamadaDia').onclick = async () => {
+        if(confirm(`Deseja limpar a marcação de hoje para ${membroSendoEditado}?`)) {
             try {
-                await deleteDoc(doc(db, "membros", membroSendoEditado));
+                await deleteDoc(doc(db, "chamada_diaria", `${hojeISO}_${membroSendoEditado}`));
+                document.querySelectorAll(`[data-id="${membroSendoEditado}"]`).forEach(el => {
+                    el.querySelector('.btn-p').classList.remove('active');
+                    el.querySelector('.btn-f').classList.remove('active');
+                });
                 bootstrap.Modal.getInstance(document.getElementById('modalEditarMembro')).hide();
-                alert("Membro removido com sucesso!");
-            } catch (e) { alert("Erro ao excluir: " + e.message); }
+                alert("Marcação removida!");
+            } catch (e) { alert(e.message); }
         }
     };
 
-    // 5. Chamada
+    // 6. EXCLUIR MEMBRO
+    document.getElementById('btnExcluirMembro').onclick = async () => {
+        if(confirm(`Excluir ${membroSendoEditado} definitivamente?`)) {
+            try {
+                await deleteDoc(doc(db, "membros", membroSendoEditado));
+                bootstrap.Modal.getInstance(document.getElementById('modalEditarMembro')).hide();
+                alert("Membro removido!");
+            } catch (e) { alert(e.message); }
+        }
+    };
+
+    // 7. Fazer Chamada
     window.fazerChamada = async (nome, status) => {
-        const hoje = new Date().toISOString().split('T')[0];
         try {
-            await setDoc(doc(db, "chamada_diaria", `${hoje}_${nome}`), { nome, data: hoje, status: status==='P'?'Presente':'Ausente' });
+            await setDoc(doc(db, "chamada_diaria", `${hojeISO}_${nome}`), {
+                nome: nome, data: hojeISO, status: status === 'P' ? 'Presente' : 'Ausente'
+            });
             document.querySelectorAll(`[data-id="${nome}"]`).forEach(el => {
                 el.querySelector('.btn-p').classList.toggle('active', status === 'P');
                 el.querySelector('.btn-f').classList.toggle('active', status === 'F');
@@ -259,6 +289,7 @@
         } catch (e) { console.error(e); }
     };
 </script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
