--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
 <div class="header-data">
     <p id="exibirData" class="data-texto"></p>
-    <p class="small text-white-50 m-0">LISTA DE PRESENÇA</p>
+    <p class="small text-white-50 m-0">LISTA DE PRESENÇa - MEMBROS COM FUNÇÃO</p>
 </div>
 
 <div id="avisoChamadaFeita" class="container mt-2">
