ADD: Atualização modal

--- a/public/index.html
+++ b/public/index.html
@@ -109,10 +109,10 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header border-secondary">
-                <h5 class="modal-title text-warning">Identificação</h5>
+                <h5 class="modal-title text-warning">Identificação para Inciar a Chamada.</h5>
             </div>
             <div class="modal-body text-center">
-                <p class="small text-white-50">Seja o primeiro a iniciar a chamada hoje!</p>
+                <p class="small text-white-50">Identifique-se com seu nome!</p>
                 <input type="text" id="nomeOperador" class="form-control mb-3" placeholder="Seu Nome">
                 <button id="btnSalvarIdentificacao" class="btn btn-primary w-100 mt-2 fw-bold">INICIAR CHAMADA</button>
             </div>
